--- a/index.html
+++ b/index.html
@@ -11,12 +11,27 @@
     <script src="https://kit.fontawesome.com/6c9dbc681c.js" crossorigin="anonymous"></script>
 </head>
 <body>
+   
+        <div class="wrapper">
+            <div class="box">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
     <section class="sec-01">
         <div class="container">
             <h2 class="main-tittle">I am Jose <span>Parra</span></h2>
             <div class="content">
                 <div class="image">
-                    <img src="assets/images/blender-test.png" alt="blender-test">
+                    <img src="assets/images/A7407075.jpg" alt="blender-test">
                 </div>
                 <div class="text-box">
                     <h3>Web developer and Graphic designer</h3>
