add animated text

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <script src="https://kit.fontawesome.com/6c9dbc681c.js" crossorigin="anonymous"></script>
 </head>
 <body>
-   
         <div class="wrapper">
             <div class="box">
                 <div></div>
@@ -28,7 +27,28 @@
         </div>
     <section class="sec-01">
         <div class="container">
-            <h2 class="main-tittle">I am Jose <span>Parra</span></h2>
+            <div class="main-tittle">
+                <div class="anim-text">
+                    <span>H</span>
+                    <span>i</span>
+                    <span>!</span>
+                    <span>  </span>
+                    <span>I</span>
+                    <span>'</span>
+                    <span>m</span>
+                    <span>  </span>
+                    <span>J</span>
+                    <span>o</span>
+                    <span>s</span>
+                    <span>e</span>
+                    <span>P</span>
+                    <span>a</span>
+                    <span>r</span>
+                    <span>r</span>
+                    <span>a</span>
+                    
+                </div>
+            </div>
             <div class="content">
                 <div class="image">
                     <img src="assets/images/A7407075.jpg" alt="blender-test">
