--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
     <script src="https://kit.fontawesome.com/6c9dbc681c.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <header>
+        <div>
+            <nav>
+                    <ul class="main-">
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="models.html">Resume</a></li>
+                        <li><a href="make.html">Contact</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+</header>
         <div class="wrapper">
             <div class="box">
                 <div></div>
@@ -32,11 +44,9 @@
                     <span>H</span>
                     <span>i</span>
                     <span>!</span>
-                    <span>  </span>
                     <span>I</span>
                     <span>'</span>
                     <span>m</span>
-                    <span>  </span>
                     <span>J</span>
                     <span>o</span>
                     <span>s</span>
@@ -50,7 +60,7 @@
                 </div>
             </div>
             <div class="content">
-                <div class="image">
+                <div class="image-1" >
                     <img src="assets/images/A7407075.jpg" alt="blender-test">
                 </div>
                 <div class="text-box">
@@ -67,6 +77,23 @@
             </div>
         </div>
     </section>
+     <section class="sec-02">
+    <div class="container">
+        <h3 class="sec-tittle">About Me</h3>
+        <div class="content">
+            <div class="image">
+                <img src="assets/images/me.jpg" alt="">
+            </div>
+            <div  id="text-box">
+                <p>this is a text that is going to describe who i am and where ive been doing in the past, i am goint to highlight my achievements aswell and my passions and my skills, this is going to be very important for people to see and for future posible en ployers
+                    this is a text that is going to describe who i am and where ive been doing in the past, i am goint to highlight my achievements aswell and my passions and my skills, this is going to be very important for people to see and for future posible en ployers
+                    
+                </p>
+            </div>
+        </div>
+        </div>
+    </section>
+    <section></section>
    
     <script src="assets/script.js"></script>
     
