--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
                 </div>
                 <div class="text-box">
                     <h3>Web developer and Graphic designer</h3>
-                    <p>Scroll down to reveal my story</p>
+                    <p>Scroll down to reveal my story ⬇️</p>
+                    
                 </div>
             </div>
             <div class="social-media">
