--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <img src="assets/images/hero-image.jpg" alt="blender-test">
                 </div>
                 <div class="text-box">
-                    <h3>Web developer and Graphic designer</h3>
+                    <h3>Software developer and Sales agent</h3>
                     <p>Scroll down to reveal my story ⬇️</p>
                     
                 </div>
